--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
-	loader_version=0.14.10
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.1
+loader_version=0.14.22
 
 # Mod Properties
-	mod_version = 0.1
-	maven_group = net.gundami
-	archives_base_name = biomecrop
+mod_version=1.0.0
+maven_group=com.example
+archives_base_name=modid
 
 # Dependencies
-	fabric_version=0.67.0+1.19.2
+fabric_version=0.89.1+1.20.2
