--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url "https://api.modrinth.com/maven" }
+	maven { url "https://maven.architectury.dev/" }
 }
 
 loom {
@@ -43,6 +45,8 @@ dependencies {
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
+	modImplementation "maven.modrinth:fabric-seasons:${project.fabric_seasons}"
+	modImplementation "dev.architectury:architectury-fabric:${project.architectury_api}"
 }
 
 processResources {
