--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.1
 loader_version=0.14.22
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+mod_version=2.0
+maven_group=net.gundami
+archives_base_name=BiomeCrops
 
 # Dependencies
-fabric_version=0.89.1+1.20.2
+fabric_version=0.86.1+1.20.1
+
+fabric_seasons=2.2.1+1.20
+architectury_api=9.1.12
