--- a/src/main/resources/biomecrops.mixins.json
+++ b/src/main/resources/biomecrops.mixins.json
@@ -1,9 +1,10 @@
 {
 	"required": true,
-	"package": "com.example.mixin",
+	"package": "net.gundami.biomecrops.mixin",
 	"compatibilityLevel": "JAVA_17",
 	"mixins": [
-		"ExampleMixin"
+		"CropGrowMixin",
+		"ItemTipsMixin"
 	],
 	"injectors": {
 		"defaultRequire": 1
